[package]
name = "tezcrypto"
version = "0.1.0"
edition = "2021"

[lib]
name = "tezcrypto"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.23.3", features = ["extension-module", "abi3-py37"], optional = true }
aes = "0.8.4"
cbc = "0.1.2"
cipher = "0.4.4"
ctr = "0.9.2"
hex = "0.4.3"

[features]
python = ["dep:pyo3"]

[dev-dependencies]
rand = "0.9.2"
